# src/index.js
@@ -2,6 +2,7 @@ import express from 'express'
 import dotenv from 'dotenv'
 import cors from 'cors'
 import authRoutes from './routes/auth.routes.js'
+import postRoutes from './routes/posts.routes.js'
 import { errorHandler } from './middlewares/errorHandler.js'
 import { setupSwagger } from './docs/swagger.js'
 
@@ -11,6 +12,7 @@ const app = express()
 app.use(express.json())
 app.use(cors())
 app.use('/api/auth', authRoutes)
+app.use('/api/posts', postRoutes)
 app.use(errorHandler)
 // Swagger docs
 setupSwagger(app)
