# src/schemas/posts.schema.js
@@ -1,0 +1,7 @@
+import { z } from 'zod'
+
+export const createPostSchema = z.object({
+  title: z.string().min(1, { message: 'El título es requerido' }),
+  content: z.string().min(1, { message: 'El contenido es requerido' }),
+  category_id: z.number({ message: 'La categoría es requerida' }),
+})
